		Swapped the cursors used for sabotaging and capturing buildings/units.
		Added Ctrl+T shortcut for selection of all units matching the types of the currently selected ones across the screen and map.
		Added a toggle spectators to multiplayer.
		Removed the ability of commandos to plant C4 on walls.
	Dune 2000:
		Added the Atreides grenadier from the 1.06 patch.
		Added randomized tiles for Sand and Rock terrain.
		Shroud is now displayed by default again (disable it in the lobby settings).
		Removed the build radius restrictions.
		Added the BLOXXMAS terrain tiles from the 1.06 patch.
		Saboteur can now plant C4 on vehicles.
	Red Alert:
		Transports will now open their doors when at shore.
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
		Parachute bomb air strike will reveal the whole target area.
		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
	Tiberian Dawn:
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower
		Fixed dinosaurs not being able to collect crates.
		A10 air strike will only reveal the target area.
		Reduced Guard Tower range from 6 to 5.
		Reduced Guard Tower vision from 7 to 6.
		Increased Guard Tower build time from 12 seconds to 24 seconds.
		Reduced Gun Turret range from 6 to 5
		Reduced Gun Turret vision from 7 to 6.
		Increased Gun Turret build time from 15 seconds to 30 seconds.
		Reduced SAM Site range from 10 to 7.
		Increased Sam Site build time from 18 seconds to 36 seconds.