@@ -22,6 +22,8 @@ namespace OpenRA
 		public void Add(World w, Actor a)
 		{
 			actors.Add(a);
+			foreach (var sel in a.TraitsImplementing<INotifySelected>())
+				sel.Selected(a);
 			foreach (var ns in w.WorldActor.TraitsImplementing<INotifySelection>())
 				ns.SelectionChanged();
 		}
@@ -47,6 +49,9 @@ namespace OpenRA
 			if (voicedUnit != null)
 				Sound.PlayVoice("Select", voicedUnit, voicedUnit.Owner.Country.Race);
 
+			foreach (var a in newSelection)
+				foreach (var sel in a.TraitsImplementing<INotifySelected>())
+					sel.Selected(a);
 			foreach (var ns in world.WorldActor.TraitsImplementing<INotifySelection>())
 				ns.SelectionChanged();
 		}
