@@ -19,6 +19,7 @@ NEW:
 		Added Ctrl+T shortcut for selection of all units matching the types of the currently selected ones across the screen and map.
 		Added a toggle spectators to multiplayer.
 		Removed the ability of commandos to plant C4 on walls.
+		Order lines are now shown on unit selection.
 	Dune 2000:
 		Added the Atreides grenadier from the 1.06 patch.
 		Added randomized tiles for Sand and Rock terrain.
